Ajuste de Dialogo do Agendamento

--- a/WebContent/WEB-INF/footer.xhtml
+++ b/WebContent/WEB-INF/footer.xhtml
@@ -6,7 +6,7 @@
     xmlns:p="http://primefaces.org/ui">
     
     <div class="layout-footer clearfix">
-        <p:graphicImage name="images/loginHealthStat.png" library="paradise-layout" />
+      <!--   <p:graphicImage name="images/loginHealthStat.png" library="paradise-layout" /> -->
         <div class="layout-footer-right">
             <!-- <a href="https://github.com/primefaces"><i class="fa fa-github"></i></a>
             <a href="https://www.facebook.com/groups/primefaces"><i class="fa fa-facebook"></i></a>
