--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -7,6 +7,7 @@
       lang="en">
 
     <h:head>
+    fa fa-stethoscope
         <f:facet name="first">
             <meta http-equiv="X-UA-Compatible" content="IE=edge" />
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,7 +17,7 @@
         <title><ui:insert name="title">PrimeFaces Paradise</ui:insert></title>
         <h:outputScript name="js/nanoscroller.js" library="paradise-layout" />
         <h:outputScript name="js/layout.js" library="paradise-layout" />
-        
+        <link rel="icon" type="imagem/png" href="/imagens/esteto.png" />
         <!-- CHAMANDO Script JavaScript  -->
         <h:outputScript name="scripty.js" library="javascript"	id="jsScriptSistemaTemplate" />
         <ui:insert name="head"/>
