Filtrando agendamento por médico

--- a/WebContent/WEB-INF/topbar.xhtml
+++ b/WebContent/WEB-INF/topbar.xhtml
@@ -42,11 +42,11 @@ text-decoration:underline;
 
 		
 		
-		<label for="topbar-search"> <i
-			class="fa fa-search topbar-search-icon"></i>
-		</label> <input type="text" class="topbar-search"
-			placeholder="Type your search here" id="topbar-search" />
-
+		<label for="topbar-search"> <!-- <i
+			class="fa fa-search topbar-search-icon"></i> -->
+		</label> <!-- <input type="text" class="topbar-search"
+			placeholder="" id="topbar-search" />
+ -->
 		<ul id="topbar-menu" class="fadeInDown animated">
 			
 
