--- a/WebContent/cadastro/cadAtendente.xhtml
+++ b/WebContent/cadastro/cadAtendente.xhtml
@@ -14,6 +14,12 @@
 
 	<ui:define name="content">
 		<h:form id="formCadastroAtendente" prependId="false">
+		 <div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Atendente"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
