--- a/WebContent/cadastro/cadCidade.xhtml
+++ b/WebContent/cadastro/cadCidade.xhtml
@@ -63,6 +63,12 @@
 
 	<ui:define name="content">
 		<h:form id="formCadastroCidade" prependId="false">
+		<div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Cidades"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
