--- a/WebContent/cadastro/cadConvenio.xhtml
+++ b/WebContent/cadastro/cadConvenio.xhtml
@@ -68,6 +68,12 @@
 
 		<!-- Cadastro de Convênio FORM -->
 		<h:form id="formCadastroConvênio" prependId="false">
+		<div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Convênios"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
