--- a/WebContent/cadastro/cadFornecedor.xhtml
+++ b/WebContent/cadastro/cadFornecedor.xhtml
@@ -18,6 +18,12 @@
 
 	<ui:define name="content">
 		<h:form id="formCadastroFornecedor" prependId="false">
+		<div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Fornecedor"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
