--- a/WebContent/cadastro/cadUnidadeDeMedida.xhtml
+++ b/WebContent/cadastro/cadUnidadeDeMedida.xhtml
@@ -66,7 +66,13 @@
 
 
 	<ui:define name="content">
-      <h:form id="formCadastro" prependId="false">
+      <h:form id="formCadastroUnidadeDeMedida" prependId="false">
+		<div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Unidade De Medida"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 		<div class="ui-fluid">
 			<div class="ui-g">
 				<div class="ui-g-12">
