--- a/WebContent/error/acessoNegado.xhtml
+++ b/WebContent/error/acessoNegado.xhtml
@@ -24,7 +24,7 @@
             </div>
             
             <div class="exception-panel-footer">
-                <p:button value="DASHBOARD" styleClass="blue-btn" outcome="/dashboard" />
+                <p:button value="DASHBOARD" styleClass="blue-btn" outcome="/restrito/dashboard" />
             </div>
         </div>
     
