--- a/WebContent/WEB-INF/template.xhtml
+++ b/WebContent/WEB-INF/template.xhtml
@@ -7,7 +7,7 @@
       lang="en">
 
     <h:head>
-    fa fa-stethoscope
+  
         <f:facet name="first">
             <meta http-equiv="X-UA-Compatible" content="IE=edge" />
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -36,8 +36,8 @@
             
             <!-- Mensagens do Sistema -->
 			<div id="msgError">
-				<p:growl id="msg" showDetail="false" sticky="false" redisplay="true"
-					autoUpdate="true" life="10000" />
+				<p:growl id="msg" sticky="false" redisplay="true"
+					autoUpdate="true" life="20000" />
 				<p:tooltip id="toolTipFocusTemplateParadise" globalSelector="a, :input, :button"
 					showEvent="focus" hideEvent="blur" />
 			</div>
