--- a/WebContent/cadastro/cadEspecialidade.xhtml
+++ b/WebContent/cadastro/cadEspecialidade.xhtml
@@ -68,6 +68,12 @@
 	<ui:define name="content">
 
 		<h:form id="formCadastroEspecialidade" prependId="false">
+		<div align="center">
+				<br />
+				<p:outputLabel value="Cadastro de Especialidade"
+					styleClass="estiloLabelCadastroIdentificacao" />
+				<br /> <br />
+			</div>
 			<div class="ui-fluid">
 				<div class="ui-g">
 					<div class="ui-g-12">
