--- a/WebContent/error/404.xhtml
+++ b/WebContent/error/404.xhtml
@@ -12,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>PrimeFaces Paradise - Error</title>
+        <title>Error - 404</title>
     </h:head>
 
     <h:body styleClass="exception-body notfound">
@@ -20,11 +20,11 @@
             <div class="exception-panel-content">
                 <p:graphicImage name="images/exception/404-icon.png" library="paradise-layout" />
                 <h1>404</h1>
-                <p>The requested page cannot be found.</p>
+                <p>A pagina requisitada não foi encontrada.</p>
             </div>
             
             <div class="exception-panel-footer">
-                <p:button value="DASHBOARD" styleClass="blue-btn" outcome="/dashboard" />
+                <p:button value="DASHBOARD" styleClass="blue-btn" outcome="/restrito/dashboard" />
             </div>
         </div>
     
